--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <h2>Chatao </h2>
 
     <section class="teclado">
-        <button class="tecla tecla_aplausos"><img src="images/aplausos.svg" alt="Aplausos"></button>
+        <button class="tecla tecla_aplausos"><img src="images/atumalaca.jpeg" alt="Aplausos"></button>
         <button class="tecla tecla_vaia"><img src="images/vaia.svg" alt="Vaia"></button>
         <button class="tecla tecla_risada"><img src="images/risada.svg" alt="Risada"></button>
 
-        <button class="tecla tecla_errado"><img src="images/errado.svg" alt="Errado"></button>
+        <button class="tecla tecla_errado"><img src="images/ratinho.jpeg" alt="Errado"></button>
         <button class="tecla tecla_grilo"><img src="images/grilo.svg" alt="Grilo"></button>
         <button class="tecla tecla_tambores"><img src="images/tambores.svg" alt="Tambores"></button>
 
-        <button class="tecla tecla_trombeta"><img src="images/trombeta.svg" alt="Trombeta"></button>
+        <button class="tecla tecla_trombeta"><img src="images/cavalo.jpeg" alt="Trombeta"></button>
         <button class="tecla tecla_dinheiro"><img src="images/dinheiro.svg" alt="Dinheiro"></button>
         <button class="tecla tecla_vitoria"><img src="images/vitoria.svg" alt="Vitória"></button>
     </section>
@@ -38,10 +38,10 @@
     <audio src="sounds/atumalaca.mp3" id="som_tecla_aplausos"></audio>
     <audio src="sounds/vaia.wav" id="som_tecla_vaia"></audio>
     <audio src="sounds/augh.mp3" id="som_tecla_risada"></audio>
-    <audio src="sounds/errado.wav" id="som_tecla_errado"></audio>
+    <audio src="sounds/ratinho.mp3" id="som_tecla_errado"></audio>
     <audio src="sounds/letsgo.mp3" id="som_tecla_grilo"></audio>
     <audio src="sounds/carinha.mp3" id="som_tecla_tambores"></audio>
-    <audio src="sounds/trombeta.wav" id="som_tecla_trombeta"></audio>
+    <audio src="sounds/cavalo.mp3" id="som_tecla_trombeta"></audio>
     <audio src="sounds/cano.mp3" id="som_tecla_dinheiro"></audio>
     <audio src="sounds/hog.mp3" id="som_tecla_vitoria"></audio>
 
